Evento de clique para riscar/desriscar a tarefa

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -83,3 +83,9 @@ input {
 .delete {
   display: none;
 }
+
+.concluido {
+  background: $secondary !important;
+  color: $text;
+  text-decoration: line-through;
+}
